[tool.poetry]
name = "web-modul-02-09"
version = "0.1.0"
description = ""
authors = ["Daryna Mirzaholi <dmirzagholi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
scrapy = "^2.11.1"
django-request = "^1.6.3"
mongoengine = "^0.28.2"
redis = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
